# ekata-gateway-processor-demo

./: .gitignore  Dockerfile  README.md  app.py  package.json  pyproject.toml  sample.env  start.sh  tailwind.config.js
screencast/: demo.webm
static/css/: index.css  tailwind.css
templates/: index.html  success.html
