[tool.poetry]
name = "ekata-gateway-processor-demo"
version = "0.1.0"
description = ""
authors = ["Prasanta Kakati <prasantakakati1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
autopep8 = "^1.5.7"
ipython = "^7.28.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
